refactoring, also symmetricKey